--- a/src/app/pages/Subject/Subject.scss
+++ b/src/app/pages/Subject/Subject.scss
@@ -38,7 +38,7 @@ ion-card,
     --background-hover: rgba(var(--ion-color-primary-rgb), 1);
     --background-selected: rgba(var(--ion-color-primary-rgb), 0.4);
     --background-focused: rgba(var(--ion-color-primary-rgb), 0.6);
-    --background-activated: rgba(var(--ion-color-primary-rgb), 0.8);
+    --background-activated: none;
     --detail-icon-color: #616e7e;
     --detail-icon-opacity: 1;
     border-radius: 5px;
@@ -79,11 +79,11 @@ ion-card,
         text-wrap: normal;
         margin-right: 10px;
         margin-top: 1px;
-        font-size: 1em;
+        font-size: .95em;
         color: white;
 
         @include to-xs {
-          margin-right: 0;
+          width: 100%;
           font-size: 0.85em;
         }
       }
@@ -91,29 +91,31 @@ ion-card,
       .description {
         width: 30%;
         text-align: right;
-        font-size: 0.95em;
+        font-size: 0.90em;
         color: #656565;
 
         @include to-xs {
-          text-align: left;
+          width: 100%;
           font-size: 0.75em;
+          text-align: left;
         }
       }
     }
 
     &:hover {
-      --background: var(--skd-background-color);
-      --background-hover: var(--skd-background-color);
-      --detail-icon-opacity: 1;
-      --detail-icon-color: var(--ion-color-primary);
+      @media (hover: hover) and (pointer: fine) {
+        --background: var(--skd-background-color);
+        --background-hover: var(--skd-background-color);
+        --detail-icon-opacity: 1;
+        --detail-icon-color: var(--ion-color-primary);
 
-      .title {
-        text-decoration: underline;
-      }
+        .title {
+          text-decoration: underline;
+        }
 
-      .description {
-        transition: 50ms ease-in-out;
-        color: white;
+        .description {
+          color: white;
+        }
       }
     }
   }
